update the basic

--- a/Basic/00_test.ipynb
+++ b/Basic/00_test.ipynb
@@ -58,6 +58,19 @@
     "else:\n",
     "    print(\"\\nNo GPU found, skip GPU test.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4a3eb70",
+   "metadata": {},
+   "source": [
+    "在终端中输入“nvidia-smi”命令，会显示出显卡驱动的版本和 CUDA 的版本信息。\n",
+    "\n",
+    "```\n",
+    "nvidia-smi\n",
+    "```\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
