--- a/Training/07_models.ipynb
+++ b/Training/07_models.ipynb
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch311",
+   "display_name": "rad-dino",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
