--- a/Training/07_models.ipynb
+++ b/Training/07_models.ipynb
@@ -9,36 +9,29 @@
     "\n",
     "例如GoogLeNet\n",
     "\n",
-    "torchvision.models模块的使用，包括如何实例化一个网络与如何进行模型的微调。\n",
+    "torchvision.models模块的使用，包括如何实例化一个网络与如何进行模型的**微调**。\n",
     "\n",
     "Torchvision 中有趣的函数，make_grid 和 save_img\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8ab3ba59",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "5.5%"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://download.pytorch.org/models/googlenet-1378be20.pth\" to ./data/checkpoints/googlenet-1378be20.pth\n"
+      "Downloading: \"https://download.pytorch.org/models/googlenet-1378be20.pth\" to ./data/checkpoints\\googlenet-1378be20.pth\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100.0%\n"
+      "100%|██████████| 49.7M/49.7M [00:13<00:00, 3.83MB/s]\n"
      ]
     }
    ],
@@ -55,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "41f35cac",
    "metadata": {},
    "outputs": [
@@ -64,7 +57,7 @@
      "output_type": "stream",
      "text": [
       "1024\n",
-      "10\n",
+      "1000\n",
       "Linear(in_features=1024, out_features=10, bias=True)\n"
      ]
     }
@@ -92,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "f0ca19d5",
    "metadata": {},
    "outputs": [
@@ -208,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "853ac013",
    "metadata": {},
    "outputs": [],
