--- a/Training/12_optimise.ipynb
+++ b/Training/12_optimise.ipynb
@@ -320,6 +320,24 @@
     "2. **泛化能力下降**：较大的 batch size 可能会导致模型在训练集上表现良好，但在测试集上表现不佳，即泛化能力下降。这是因为较大的 batch size 可能会使模型更容易陷入局部最优解。\n",
     "3. **收敛速度**：较小的 batch size 通常会导致更快的收敛速度，因为它引入了更多的噪声，有助于跳出局部最优解。然而，过小的 batch size 可能会导致训练过程不稳定。快的收敛速度，因为它引入了更多的噪声，有助于跳出局部最优解。然而，过小的 batch size 可能会导致训练过程不稳定。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e822742",
+   "metadata": {},
+   "source": [
+    "模型训练的本质就是确定网络结构、设定损失函数与优化方法。\n",
+    "\n",
+    "机器学习开发的3个步骤\n",
+    "1. 数据处理：主要包括数据清理、数据预处理、数据增强等。总之，就是构建让模型使用的训练集与验证集。\n",
+    "2. 模型训练：确定网络结构，确定损失函数与设置优化方法。\n",
+    "3. 模型评估：使用各种评估指标来评估模型的好坏。\n",
+    "\n",
+    "模型训练3步：\n",
+    "1. 模型结构设计：例如，机器学习中回归算法、SVM 等，深度学习中的 VGG、ResNet、SENet 等各种网络结构，再或者你自己设计的自定义模型结构。\n",
+    "2. 给定损失函数：损失函数衡量的是当前模型预测结果与真实标签之间的差距。\n",
+    "3. 给定优化方法：与损失函数搭配，更新模型中的参数。"
+   ]
   }
  ],
  "metadata": {
