--- a/Basic/03_tensor.ipynb
+++ b/Basic/03_tensor.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "fb1c6c10",
    "metadata": {},
    "outputs": [
@@ -43,19 +43,19 @@
       "        [0., 0., 0., 1.]])\n",
       "arange_tensor: tensor([0., 2., 4., 6., 8.])\n",
       "linspace_tensor: tensor([0.0000, 0.2500, 0.5000, 0.7500, 1.0000])\n",
-      "rand_tensor: tensor([[0.9110, 0.3321, 0.9602],\n",
-      "        [0.7950, 0.6236, 0.7947],\n",
-      "        [0.0589, 0.4025, 0.0117]])\n",
-      "randn_tensor: tensor([[-1.3588, -2.4594,  0.3198, -0.0436],\n",
-      "        [-2.0158,  0.0813,  0.0378, -0.2368]])\n",
-      "randperm_tensor: tensor([9, 3, 7, 4, 8, 0, 6, 5, 1, 2])\n",
-      "normal_tensor: tensor([[ 1.6344, -1.2577,  0.2292],\n",
-      "        [ 0.2665, -0.8695,  1.3954],\n",
-      "        [-0.4596, -0.8160, -1.6917]])\n",
-      "randint_tensor: tensor([[8, 2, 2, 2],\n",
-      "        [4, 7, 7, 1],\n",
-      "        [2, 0, 7, 5],\n",
-      "        [2, 8, 4, 7]])\n"
+      "rand_tensor: tensor([[0.5073, 0.6530, 0.7430],\n",
+      "        [0.4175, 0.3119, 0.1014],\n",
+      "        [0.0416, 0.8951, 0.5418]])\n",
+      "randn_tensor: tensor([[ 0.1882, -0.2636,  1.1736,  2.3078],\n",
+      "        [-0.4094,  0.7360, -0.5221, -0.8800]])\n",
+      "randperm_tensor: tensor([3, 6, 0, 4, 1, 5, 9, 2, 7, 8])\n",
+      "normal_tensor: tensor([[ 0.6581,  0.3416,  0.0386],\n",
+      "        [ 0.7026, -1.9540, -0.7445],\n",
+      "        [ 0.5940, -0.4692,  1.7511]])\n",
+      "randint_tensor: tensor([[4, 8, 1, 6],\n",
+      "        [7, 3, 8, 3],\n",
+      "        [5, 2, 2, 7],\n",
+      "        [3, 0, 4, 1]])\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "36848077",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "0614b886",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "cee30a28",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "6171d9ab",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "a020f916",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "13d4c963",
    "metadata": {},
    "outputs": [
@@ -295,20 +295,9 @@
      "output_type": "stream",
      "text": [
       "Original shape: torch.Size([2, 1, 3, 1, 4])\n",
-      "Squeezed shape: torch.Size([2, 1, 3, 1, 4])\n",
-      "Unsqueezed shape: torch.Size([2, 1, 1, 3, 1, 4])\n",
-      "Unsqueezed2 shape: torch.Size([2, 1, 1, 1, 3, 1, 4])\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
-      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
-      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
-      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+      "Squeezed shape: torch.Size([2, 3, 4])\n",
+      "Unsqueezed shape: torch.Size([2, 1, 3, 4])\n",
+      "Unsqueezed2 shape: torch.Size([2, 1, 3, 1, 4])\n"
      ]
     }
    ],
@@ -330,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ce2f3829",
    "metadata": {},
    "outputs": [],
