update the vgpus

--- a/Training/15_train_fast.ipynb
+++ b/Training/15_train_fast.ipynb
@@ -842,6 +842,22 @@
     "\n",
     " PyTorch 文档：https://pytorch.org/docs/stable/distributed.html"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68d29afc",
+   "metadata": {},
+   "source": [
+    "为了不浪费算力，最终找的是供应商的云方案（国内的可以联系字节、百度、阿里等）\n",
+    "\n",
+    "但是如果你们是准备自己运维的话，那么可以看看开源的方案，比如你们也是混在情况的，可以参考\n",
+    "https://github.com/Project-HAMi/HAMi?tab=readme-ov-file\n",
+    "\n",
+    "如果你们是纯英伟达的，可以参考\n",
+    "https://github.com/4paradigm/k8s-vgpu-scheduler?tab=readme-ov-file\n",
+    "\n",
+    "https://www.cnblogs.com/niuben/p/18160759        # 上面项目的辅助介绍"
+   ]
   }
  ],
  "metadata": {
